fix(header): 100vw is bigger then window when scrollbar is present

--- a/src/scss/atomic/organisms/_header.scss
+++ b/src/scss/atomic/organisms/_header.scss
@@ -108,7 +108,6 @@ $headerHeight: $buildingUnit * 5;
     transform: translateY(0);
     position: fixed;
     top: 0;
-    width: 100vw;
 }
 
 // Used by VUE transition
